# EfficientPyTorch

./: .gitignore  README.md  pyproject.toml
chapter_01_intro/: 1_plot_cost_time.py
chapter_03_pytorch/: 10_adv_index.py  11_assign_adv.py  12_matmul.py  13_dynamic_graph.py  14_static_graph.py  15_ad.py  16_ad_inplace.py  17_custom_ad.py  1_tensor_creation.py  2_torch_indexing.py  3_assign_via_basic.py  4_transpose.py  5_basic_index_view.py  6_reshape.py  7_basic_op.py  8_add_op.py  9_inplace_add.py
chapter_04_profiler/: 10_clock_not_supported.sh  11_fix_cpu_clock.sh  12_query_cpu.sh  13_cpu_time.py  13_query_cstate.sh  14_warmup.py  15_sync.py  16_event.py  17_profile_basic.py  18_profile_memory.py  19_profile_export.py  1_ps.sh  20_ncu.py  21_py_spy.py  22_pyspy_cmd.sh  23_strace.sh  3_seed_pt.py  4_seed_np.py  5_seed_py.py  6_hash.sh  8_set_seed.py  9_fix_gpu_clock.sh
chapter_05_data/: 0_cifar.sh  10_iostat.sh  1_from_numpy.py  2_from_numpy_error.py  3_predefined_dataset.py  4_custom_dataset.py  5_dataloder.py  6_dataloader_result.sh  7_pil.py  8_np_thread.py  9_limit_np_thread.py
chapter_06_compute/: 10_inplace.py  11_inference_mode.py  12_copy_uint8.py  13_sgd.py  14_optim.py  1_num_worker.py  2_non_blocking.py  3_double_buffering.json  3_double_buffering.py  4_batch_size.py  5_addcmul.py  6_addmm.py  7_fused_linear_bn.py  8_non_zero.py  9_tensor_on_cuda.py
chapter_07_memory/: 1.5_allocated.py  10_cross_batch.py  11_no_accumulation.py  12_pow_model_checkpoint.py  13_offloading.py  14_adam_update_weight.py  15_adam_remove_grad.py  16_python_gc.py  18_cycle.py  (+13 more)
(+64 files in other folders)
